Bug 78904 - FILESAVE: LO hangs while saving attached .docx file
Summary: FILESAVE: LO hangs while saving attached .docx file
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.2.4.2 release
Hardware: All Linux (All)
: highest major
Assignee: Sourav
URL:
Whiteboard: BSA target:4.4.0 target:4.3.1 target:...
Keywords: bibisected, regression
Depends on:
Blocks: mab4.2
  Show dependency treegraph
 
Reported: 2014-05-19 11:43 UTC by Sushil Shinde
Modified: 2015-12-17 08:11 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
File which puts LO in hanged condition. (151.55 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2014-05-19 11:43 UTC, Sushil Shinde
Details
Test document (69.36 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2014-06-12 13:13 UTC, Umesh Kadam
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Sushil Shinde 2014-05-19 11:43:46 UTC
Created attachment 99329 [details]
File which puts LO in hanged condition.

Problem description: 
If attached docx file opened in LO Writer and tried to save as .docx again, LO hangs.

Steps to reproduce:
1. Open attached file with latest master build.
2. Save file as .docx.
3. LO will go in hang state.

Current behavior:
LO hangs while saving.

Expected behavior:
LO should save attached file properly.

              
Operating System: Ubuntu
Version: 4.3.0.0.alpha0+ Master
Comment 1 Joel Madero 2014-05-20 04:12:29 UTC
Not a new problem - verified on at least 4.2.4.2 - it actually crashes after some time. 

version is oldest version we can confirm the problem - not the latest that it has been tested on. Going to bibisect now to see if it ever worked
Comment 2 Joel Madero 2014-05-20 04:35:39 UTC
This is an interesting one: 

New - confirmed
Major - crash/loss of data
Highest - regression

Notes to Devs: Different results with different versions, 4.2 series hangs/crashes, 4.3 apparently for OP did the same (at least hung), but I tested with master from last week and I first got an error but now I can't reproduce the error, now just hang and crash.
Comment 3 Joel Madero 2014-05-20 04:36:39 UTC
 ed14c343dbd60721ca417ee0ae2ace3a66746e89 is the first bad commit
commit ed14c343dbd60721ca417ee0ae2ace3a66746e89
Author: Bjoern Michaelsen <bjoern.michaelsen@canonical.com>
Date:   Fri Oct 18 03:41:50 2013 +0000

    source-hash-9ef052368842f9e5b56b9d47329a81da8e8e2da1
    
    commit 9ef052368842f9e5b56b9d47329a81da8e8e2da1
    Author:     Kohei Yoshida <kohei.yoshida@gmail.com>
    AuthorDate: Tue Aug 27 11:43:23 2013 -0400
    Commit:     Kohei Yoshida <kohei.yoshida@gmail.com>
    CommitDate: Wed Aug 28 08:56:58 2013 -0400
    
        bClearRange is always true. Remove it.
    
        Change-Id: I1df4bdaa5f13ede9e04972a02948eb072dca2bec

:100644 100644 15df7f2ce983ade1d48007e9fca8b449481a4f00 d52c43c0bc2275949f9a2e435f8af083e9071887 M	ccache.log
:100644 100644 ba6308a5188c4926aa27dc9513aedd5892659a8a fffcc7303889e8f67b1518a4f0ba8a2f42d980c1 M	commitmsg
:100644 100644 27834218587a9d633457dfd29ddfd57673ad9c48 0974a9c3975e9c679992b858e654b4fb2f61c4e0 M	dev-install.log
:040000 040000 cf7fed03cf5d2ccc674979f5c5fe2d96ea898455 1cab386d1ef582b911fdae3787cd2b9c63e5cc14 M	opt


# bad: [793dbf6f80f497dfe587d560d6257f42a24273f6] source-hash-1581b1fc3ac82a7bd62df968226e98604a4ca52d
# good: [65fd30f5cb4cdd37995a33420ed8273c0a29bf00] source-hash-d6cde02dbce8c28c6af836e2dc1120f8a6ef9932
git bisect start 'latest' 'oldest'
# good: [8092559c5013969ebda017d79200463b9b975038] source-hash-fd84daf696a368c2c7561b5253b32a63ecdeca4a
git bisect good 8092559c5013969ebda017d79200463b9b975038
# good: [0270ef1b76a6de423b30f7927362cc01c1a0fc38] source-hash-b1f7dd66b898b03cb4bd8d434b6370310ea95946
git bisect good 0270ef1b76a6de423b30f7927362cc01c1a0fc38
# skip: [ddb123cad22440994cd332d9985dd9558fd07e07] source-hash-647fb29f528b891a1c92846640f7865f5c1fbe7f
git bisect skip ddb123cad22440994cd332d9985dd9558fd07e07
# skip: [9d357dc6201f7cd91448595e0a3f89dfdae81946] source-hash-2304beaca33c63b94df99cb827716f00ce259f9a
git bisect skip 9d357dc6201f7cd91448595e0a3f89dfdae81946
# good: [ef72aa34cf4ee6399b192de28708d621c9680a50] source-hash-7e07a45500dcbb891a85f0bc9b7049cf4d50bba1
git bisect good ef72aa34cf4ee6399b192de28708d621c9680a50
# bad: [2472598a0b04eef3038d56137f27dc6dc1edf9e5] source-hash-5050dfc73f194d1d59222cac72e69a917655d816
git bisect bad 2472598a0b04eef3038d56137f27dc6dc1edf9e5
# bad: [f7c906a1908211e1da263a58e40cc8a3b227fcd9] source-hash-d3ff876f3c7f441fd72a037ed31fb973f223ca6d
git bisect bad f7c906a1908211e1da263a58e40cc8a3b227fcd9
# good: [a2051f95d4e218b2cf99db275d9def985e40a082] source-hash-4450b1b93f7f7b5f97c631fe767b1156350a9227
git bisect good a2051f95d4e218b2cf99db275d9def985e40a082
# bad: [ed14c343dbd60721ca417ee0ae2ace3a66746e89] source-hash-9ef052368842f9e5b56b9d47329a81da8e8e2da1
git bisect bad ed14c343dbd60721ca417ee0ae2ace3a66746e89
# good: [0f971c3ad02abe7ff2131778f0a00e489392f5a5] source-hash-8a569f1c4decc7440e9dae1af35d7fa59c3b0121
git bisect good 0f971c3ad02abe7ff2131778f0a00e489392f5a5
# good: [a54cf97272e0ccc86700f5677583a2f071d8ec0c] source-hash-e926621fb00f31471b0037d7955b6a3d7f908dc0
git bisect good a54cf97272e0ccc86700f5677583a2f071d8ec0c
# good: [3cebf968a50e191ffd507ddb7c963c6608df517d] source-hash-c89d6bcdb44cb06f7bbd907d191dfbe18cfb0cc5
git bisect good 3cebf968a50e191ffd507ddb7c963c6608df517d
# first bad commit: [ed14c343dbd60721ca417ee0ae2ace3a66746e89] source-hash-9ef052368842f9e5b56b9d47329a81da8e8e2da1
Comment 4 Joel Madero 2014-05-20 04:39:09 UTC
@Sushil - it would be really nice if you could narrow down the bug by getting a simpler document. One way to do this is just to start deleting pages and trying to save. See what page is actually causing the hang. The more complex the document the harder it is for devs to figure out what's going on.

Email me if you need additional help - we'd really appreciate it. Thanks!
Comment 5 Joel Madero 2014-05-20 05:38:27 UTC
I think bug 78902 may be a duplicate of this one but two different files. Both are complex. That user says if you modify his document at all (even just deleting a character) you can save. Therefore, I'm afraid that getting a simpler document may be difficult. Adding bug 78902 in see also because I'm unsure if it's a duplicate.
Comment 6 Sushil Shinde 2014-05-20 05:49:38 UTC
(In reply to comment #5)
> I think bug 78902 may be a duplicate of this one but two different files.
> Both are complex. That user says if you modify his document at all (even
> just deleting a character) you can save. Therefore, I'm afraid that getting
> a simpler document may be difficult. Adding bug 78902 in see also because
> I'm unsure if it's a duplicate.


Hi Joel Madero,

Just adding some more information, This is as MS Office 2007 version file. If we open it on MS Office 2010 version and save without removing anything and open it again on LO latest master, file work properly. I am trying to optimize this file by removing pages on MS Office 2007 version. After removing aroung 10 pages file started saving properly.
Trying to find out specific data which is causing hang/crash.

Regards.
Comment 7 tommy27 2014-06-04 19:26:29 UTC
tested under Win7x64

LibO 4.2.4.2 doesn't hang but can't save that docx file neither. 
an immediate error popup dialog says: "write error. impossibe to write on file" 

LibO 4.4.0.0.alpha0+ (*) can save that file. saving is slow but does the job.

(*) Build ID: dacab84536f61f79a5422e1d8d394019ec62f3ec
TinderBox: Win-x86@39, Branch:master, Time: 2014-06-04_04:27:18
Comment 8 Umesh Kadam 2014-06-12 13:13:09 UTC
Created attachment 100919 [details]
Test document
Comment 9 tommy27 2014-06-13 01:12:03 UTC
(In reply to comment #8)
> Created attachment 100919 [details]
> Test document

4.2.4.2 can't save that file (impossible to write file error dialog)

4.4.0.0.alpha0+ can save it
Build ID: 81d2c208a4e6f9df87e2ee70c6e6da146742178a
TinderBox: Win-x86@42, Branch:master, Time: 2014-06-10_23:52:11
Comment 10 Commit Notification 2014-06-20 08:49:27 UTC
Umesh Kadam committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=75fc9e669f209472ec6a282848166d96d02d84d9

fdo#78904 : LO hangs while saving the document.



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 11 Commit Notification 2014-07-30 16:02:07 UTC
Umesh Kadam committed a patch related to this issue.
It has been pushed to "libreoffice-4-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=77ab92bfae9cd32f50e993e0fd8cdec4e6e4a2ff&h=libreoffice-4-3

fdo#78904 : LO hangs while saving the document.


It will be available in LibreOffice 4.3.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 12 Commit Notification 2014-08-01 10:32:25 UTC
Umesh Kadam committed a patch related to this issue.
It has been pushed to "libreoffice-4-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=f11ec770f360c33953efa989532ff21c28dd38df&h=libreoffice-4-2

fdo#78904 : LO hangs while saving the document.


It will be available in LibreOffice 4.2.7.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 13 Robinson Tryon (qubit) 2015-12-17 08:11:16 UTC
Migrating Whiteboard tags to Keywords: (bibisected)
[NinjaEdit]